bold name in pubs and update header

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,5 @@
 - title: "Assessing the Effects of Surface-Stabilized Zero-Valent Iron Nanoparticles on Diverse Bacteria Species Using Complementary Statistical Models"
-  authors: "B. J. Carnathan, D. Stevens, S. Shikha, C. Slater, *N. Byford*, R. X. Sturdivant, K. Zarzosa, W. E. Braswell, and C. M. Sayes"
+  authors: "B. J. Carnathan, D. Stevens, S. Shikha, C. Slater, <b>N. Byford</b>, R. X. Sturdivant, K. Zarzosa, W. E. Braswell, and C. M. Sayes"
   venue: "Journal of Functional Biomaterials"
   year: 2025
   type: "journal"
